<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Comensales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comensales_input"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_label"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:layout_margin="10dp"> </Switch>

    <com.google.android.material.slider.Slider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_string"
        android:layout_margin="10dp"> </Button>

    <TextView
        android:id="@+id/Total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_total_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"> </TextView>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"> </TextView>

</LinearLayout>